# Python_Modulo2

./: .gitignore  README.md  pyproject.toml
bloque1_logica_condicional_avanzada_y_bucles/: ejercicio1.py  ejercicio2.py  ejercicio3.py  ejercicio4.py  ejercicio5.py
bloque1_logica_condicional_avanzada_y_bucles/ejercicio1/: test_ejercicio1.py
bloque1_logica_condicional_avanzada_y_bucles/ejercicio2/: test_ejercicio2.py
bloque1_logica_condicional_avanzada_y_bucles/ejercicio3/: main.py  test_ejercicio3.py
bloque1_logica_condicional_avanzada_y_bucles/ejercicio4/: main.py  test_ejercicio4.py
bloque1_logica_condicional_avanzada_y_bucles/ejercicio5/: test_ejercicio5.py
bloque2_manipulacion_iterativa_y_herramientas_avanzadas/: ejercicio10.py  ejercicio6.py  ejercicio7.py  ejercicio8.py  ejercicio9.py
bloque2_manipulacion_iterativa_y_herramientas_avanzadas/ejercicio10/: main.py  test_ejercicio10.py
bloque2_manipulacion_iterativa_y_herramientas_avanzadas/ejercicio6/: main.py  test_ejercicio6.py
bloque2_manipulacion_iterativa_y_herramientas_avanzadas/ejercicio7/: main.py  test_ejercicio7.py
bloque3_algoritmos_y_proyectos_de_logica_aplicadas/: ejercicio11.py  ejercicio12.py  ejercicio13.py  ejercicio14.py  ejercicio15.py
test/: test_ejercicio1.py  test_ejercicio10.py  test_ejercicio11.py  test_ejercicio12.py  test_ejercicio13.py  test_ejercicio14.py  test_ejercicio15.py  test_ejercicio2.py  test_ejercicio3.py  test_ejercicio4.py  test_ejercicio5.py  test_ejercicio6.py  test_ejercicio7.py  test_ejercicio8.py  test_ejercicio9.py
(+13 files in other folders)
